--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
 language: c
 compiler : gcc
-script: make
+dist: xenial
+script: make && git ls-files src/ | xargs clang-format -i && git diff --exit-code
